--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
-		"@tailwindcss/typography": "^0.5.10",
+		"@tailwindcss/typography": "^0.5.13",
 		"@types/eslint": "^8.56.0",
 		"@typescript-eslint/eslint-plugin": "^7.0.0",
 		"@typescript-eslint/parser": "^7.0.0",
@@ -36,6 +36,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@portabletext/to-html": "^2.0.13",
 		"@portabletext/types": "^2.0.13",
 		"@sanity/client": "^6.18.2",
 		"@sanity/image-url": "^1.0.2",
