--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"@sanity/client": "^6.18.2",
 		"@sanity/image-url": "^1.0.2",
 		"@sanity/types": "^3.43.0",
+		"@vercel/analytics": "^1.3.1",
 		"bits-ui": "^0.21.9",
 		"clsx": "^2.1.1",
 		"groq": "^3.43.0",
